--- a/html/cadUsuario.html
+++ b/html/cadUsuario.html
@@ -52,13 +52,13 @@
 
   </div>
 </div>
-
+<div id="mensagem"></div>
 </fieldset>
 </form>
     <br>
     <a href="../index.php" id="blogin" name="blogin"class="btn btn-warning">
     Voltar p/Login</a>
-
+    
     </center>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
