Arrumando o bug de cadastro dos usuarios e adicionando um sql para o bd

--- a/html/cadUsuario.html
+++ b/html/cadUsuario.html
@@ -16,7 +16,7 @@
 
 <!-- Text input-->
 <div class="form-group">
-  <label class="col-md-4 control-label" for="usuario"></label>  
+  <label class="col-md-4 control-label" for="usuario">CPF: </label>  
   <div class="col-md-4">
   <input id="cpf" name="cpf" type="text" placeholder="cpf" class="form-control input-md" required="cpf">
     
@@ -46,13 +46,13 @@
 <div class="form-group">
   <label class="col-md-4 control-label" for="bsalvar"></label>
   <div class="col-md-8">
-    <button id="bsalvar" type="submit" name="bsalvar" class="btn btn-success">Salvar</button>
+    <input id="bsalvar" type="submit" name="bsalvar" class="btn btn-success" value="Salvar">
 
     <button id="bcancelar" name="bcancelar" class="btn btn-danger">Cancelar</button>
 
   </div>
 </div>
-<div id="mensagem"></div>
+<div id="mensagem">#mensagem</div>
 </fieldset>
 </form>
     <br>
