--- a/html/login.html
+++ b/html/login.html
@@ -19,7 +19,7 @@
 
             <h1 class="titulo">🐱COMIDINHA PET🐶</h1>
             <div class="form-group">
-            <form action="src/login.php" method="post">
+            <form action="src/login.php" method="post" autocomplete="off">
               <input name="cpf" type="number" placeholder="Digite o cpf:" 
               class="input-control"><br>
               <input name="senha"  type="password" placeholder="Digite a senha:" 
