--- a/html/menu.html
+++ b/html/menu.html
@@ -30,6 +30,8 @@
                         <li><a href="https://www.facebook.com/comidinhapetsaudavel"> <img src="../html/img/face.png" /></a></li>
                         <li><a href="https://www.instagram.com/comidinha.pet/"><img src="../html/img/logoinsta.png"/></a></li>
                         <li><a href="https://www.linkedin.com/"> <img src="../html/img/linkedin.png" /></a></li>
+                        <li><a href="../index.php"> <img src="../html/img/lougout.png" /></a></li>
+
                     </ul>
                 </div>
             </div>
