logout em todas as guias

--- a/html/servicos.html
+++ b/html/servicos.html
@@ -28,6 +28,8 @@
               <li><a href="https://www.facebook.com/comidinhapetsaudavel"> <img src="img/face.png" /></a></li>
               <li><a href="https://www.instagram.com/comidinha.pet/"><img src="img/logoinsta.png"/></a></li>
               <li><a href="https://www.linkedin.com/"> <img src="img/linkedin.png"/></a></li>
+              <li><a href="../src/logout.php"> <img src="../html/img/lougout.png" /></a></li>
+
           </ul>
       </div>
   </div>
